--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>are we streak still</title>
+    <style>
+        #pfp {
+            width: 100px;
+            height: auto;
+        }
+    </style>
 <body>
     <h1>are we streak still?</h1>
     <p>tiktok streak tracker</p>
     <hr>
+    <img src="images/wish.jpeg" id="pfp" title="Wish's PFP on TikTok"><img src="images/squirrel.jpeg" id="pfp" title="Squirrel's PFP on TikTok">
     <hr>
     <footer>
         <p>2025 Wish & Squirrel. Licensed under GPL-3.0.</p>
