--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>are we streak still</title>
     <style>
+        * {
+            text-align: center;
+            color: white;
+            font-family: "Epunda Sans", sans-serif;
+            font-optical-sizing: auto;
+            font-style: normal;
+        }
+        body {
+            background-color: black;
+        }
         #pfp {
             width: 100px;
             height: auto;
         }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Epunda+Sans:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="images/fire.png">
 <body>
     <h1>are we streak still?</h1>
     <p>tiktok streak tracker</p>
     <hr>
     <img src="images/wish.jpeg" id="pfp" title="Wish's PFP on TikTok"><img src="images/squirrel.jpeg" id="pfp" title="Squirrel's PFP on TikTok">
     <hr>
+        <img src="images/fire.png">
+        <h1>Yes!</h1>
+        <p>TikTok Streak is going grand. (Current day count: 5 days)</p>
+    <hr>
+        <h1>Pet Info</h1>
+        <p>Name: Greg McBallsack</p>
+        <p>Birthday: September 14th, 2025 (Virgo)</p>
+        <p>Birthplace: TikTok</p>
     <footer>
         <p>2025 Wish & Squirrel. Licensed under GPL-3.0.</p>
-        <br>
         <p>Last updated: September 19th, 2025.</p>
     </footer>
 </body>
