--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,10 @@
         <p>Name: Greg McBallsack</p>
         <p>Birthday: September 14th, 2025 (Virgo)</p>
         <p>Birthplace: TikTok</p>
+    <hr>
     <footer>
         <p>2025 Wish & Squirrel. Licensed under GPL-3.0.</p>
+        <p>Certain images may not be under the same license. We do not own and are not associated with TikTok or any related entities.</p>
         <p>Last updated: September 19th, 2025.</p>
     </footer>
 </body>
