clear cache greg

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <hr>
     <img src="images/wish.jpeg" id="pfp" title="Wish's PFP on TikTok"><img src="images/squirrel.jpeg" id="pfp" title="Squirrel's PFP on TikTok">
     <hr>
-        <img src="images/fire.png">
+        <img src="images/fire.png?skibidiohio">
         <h1>Yes!</h1>
         <p>TikTok Streak is going grand. (Current day count: 5 days)</p>
     <hr>
