add sad fire + edit streak thingy

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,10 @@
             width: 100px;
             height: auto;
         }
+        #streak {
+            width: 128px;
+            height: auto;
+        }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +34,7 @@
     <hr>
     <img src="images/wish.jpeg" id="pfp" title="Wish's PFP on TikTok"><img src="images/squirrel.jpeg" id="pfp" title="Squirrel's PFP on TikTok">
     <hr>
-        <img src="images/fire.png?newbyus" title="Our own streak icon thingy it honestly looks better imo">
+        <img src="images/fire.png?newbyus" title="Our own streak icon thingy" id="streak">
         <h1>Yes!</h1>
         <p>TikTok Streak is going grand. (Current day count: 5 days)</p>
     <hr>
