--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     <hr>
         <img src="images/fire.png?newbyus" title="Our own streak icon thingy" id="streak">
         <h1>Yes!</h1>
-        <p>TikTok Streak is going grand. (Current day count: 5 days)</p>
+        <p>Current day count: 5</p>
     <hr>
         <h1>Pet Info</h1>
         <p>Name: Greg McBallsack</p>
@@ -46,6 +46,7 @@
     <footer>
         <p>2025 Wish & Squirrel. Licensed under GPL-3.0.</p>
         <p>Certain images may not be under the same license. We do not own and are not associated with TikTok or any related entities.</p>
+        <p>All content listed is manually updated and may not be updated. You can see the latest update date below.</p>
         <p>Last updated: September 19th, 2025.</p>
     </footer>
 </body>
