--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <footer>
         <p>2025 Wish & Squirrel. Licensed under GPL-3.0.</p>
         <p>Certain images may not be under the same license. We do not own and are not associated with TikTok or any related entities.</p>
-        <p>All content listed is manually updated and may not be updated. You can see the latest update date below.</p>
+        <p>All content listed is manually updated and may not be update-to-date. You can see the latest update date below.</p>
         <p>Last updated: September 19th, 2025.</p>
     </footer>
 </body>
