--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,8 @@
     <img src="images/wish.jpeg" id="pfp" title="Wish's PFP on TikTok"><img src="images/squirrel.jpeg" id="pfp" title="Squirrel's PFP on TikTok">
     <hr>
         <img src="images/fire.png?newbyus" title="Our own streak icon thingy" id="streak">
-        <h1>Yes!</h1>
-        <p>Current day count: 5</p>
+        <h1>NO SqUIREL EXPLIODE AND DIE </h1>
+        <p>Current day count: 6767676767676767</p>
     <hr>
         <h1>Pet Info</h1>
         <p>Name: Greg McBallsack</p>
@@ -48,6 +48,7 @@
         <p>Certain images may not be under the same license. We do not own and are not associated with TikTok or any related entities.</p>
         <p>All content listed is manually updated and may not be update-to-date. You can see the latest update date below.</p>
         <p>Last updated: September 19th, 2025.</p>
+        <p>ok</p>
     </footer>
 </body>
 </html>
